--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -30,8 +30,8 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             dist/github-contribution-grid-snake-dimmed.svg?color_snake=#a685e2&color_dots=#2d333b,#4e336e,#71459a,#9456c6,#b768f2
-            dist/github-contribution-grid-snake-ocean.svg?color_snake=#00c8ff&color_dots=#161b22,#0d1117,#0e4429,#006d32,#26a641
-            dist/github-contribution-grid-snake-fire.svg?color_snake=#ff8c00&color_dots=#161b22,#0d1117,#3f1b1b,#7c2d2d,#b83e3e
+            dist/github-contribution-grid-snake-ocean.svg?color_snake=#00c8ff&color_dots=#2d333b,#238636,#2ea043,#3fb950,#6bc46d
+            dist/github-contribution-grid-snake-fire.svg?color_snake=#ff8c00&color_dots=#2d333b,#803030,#a84040,#d65555,#ff8c00
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
