fix: 修复工作流依赖，确保 generate 完成后再运行 update-readme

--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -46,6 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-readme:
+    needs: generate
     runs-on: ubuntu-latest
     permissions:
       contents: write
