--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -28,6 +28,7 @@ jobs:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-light.svg?palette=github-light
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             dist/github-contribution-grid-snake-dimmed.svg?color_snake=#a685e2&color_dots=#2d333b,#4e336e,#71459a,#9456c6,#b768f2
             dist/github-contribution-grid-snake-ocean.svg?color_snake=#00c8ff&color_dots=#2d333b,#238636,#2ea043,#3fb950,#6bc46d
