--- a/.github/workflows/blog_posts.yml
+++ b/.github/workflows/blog_posts.yml
@@ -11,9 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: gautamkrishnar/blog-post-workflow@v1
+      - name: Main Blog Source
+        id: main_blog
+        continue-on-error: true
+        uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          # Check both main domain and pages.dev mirror, try both rss.xml and atom.xml
-          feed_list: "https://blog.liansifan.me/rss.xml,https://blog.liansifan.me/atom.xml,https://fans-docs.pages.dev/rss.xml"
+          feed_list: "https://blog.liansifan.me/rss.xml,https://blog.liansifan.me/atom.xml"
           max_post_count: 5
-          template: "- [$title]($url)"
+          template: "$newline- [$title]($url)"
+
+      - name: Backup Blog Source
+        if: steps.main_blog.outcome == 'failure'
+        uses: gautamkrishnar/blog-post-workflow@v1
+        with:
+          feed_list: "https://fans-docs.pages.dev/rss.xml"
+          max_post_count: 5
+          template: "$newline- [$title]($url)"
